Revision history for {{$dist->name}}

{{$NEXT}}
          numerous improvements to testing libraries
          added include_dotfiles option to AllFiles
          allow relative root directory for AllFiles
          add 'dzil nop' command to initialize zilla object and exit

1.100711  2010-03-12 12:51:55 America/New_York
          remove bogus attempt to load obsolete DZ::Logger::Global

1.100710  2010-03-12 09:58:10 America/New_York
          huge update to logging system; uses Log::Dispatchouli::Proxy

          UploadToCPAN, FakeRelease now log via the standard logger
          App::Cmd layer'Zilla is shared between commands

          bump up some prereqs to avoid bugs fixed upstream

          HIGHLY EXPERIMENTAL: first pass at testing systems

1.100660  2010-03-07 07:56:30 America/New_York
          Global logger handles log_fatal correctly

1.100651  2010-03-06 23:18:54 America/New_York
          improve how plugin and pluginbundle names are generated and reported
          improve logging to make it clear what is logging what
          add a -v switch to dzil to allow "verbose" logging

1.100650  2010-03-06 11:46:23 America/New_York
          add some missing prereqs
          now configured with @RJBS rather than custom set of plugins

1.100630  2010-03-03 22:23:21 America/New_York
          the log method now uses a pluggable logger, defaulting to
            Log::Dispatchouli
          plugins now log with a useful prefix to indicate what is logging

          prerequisites are now managed by Dist::Zilla::Prereq
          complex prereqs (a la Version::Requirement) are possible

1.100600  2010-03-01 08:19:06 America/New_York
          the File role provides a mode attribute; files are chmodded on write
          the mode attribute may not be world-writeable
          files gathered by AllFiles will have their on-disk mode &= 0755

1.100520  2010-02-21 15:53:39 America/New_York
          MakeMaker plugin correctly requires the right version of perl again
