@@ -48,11 +48,17 @@ sub munge_perl {
 
   return unless my $package_stmts = $document->find('PPI::Statement::Package');
 
-  # $hack is here so that when we scan *this* document we
-  my $version_doc = PPI::Document->new(\"our \$VERSION\x20=\x20'$version';\n");
-  my @children = $version_doc->schildren;
-
   for my $stmt (@$package_stmts) {
+    my $package = $stmt->namespace;
+
+    # the \x20 hack is here so that when we scan *this* document we don't find
+    # an assignment to version; it shouldn't be needed, but it's been annoying
+    # enough in the past that I'm keeping it here until tests are better
+    my $perl = "\$$package\::VERSION\x20=\x20'$version';\n";
+
+    my $version_doc = PPI::Document->new(\$perl);
+    my @children = $version_doc->schildren;
+
     Carp::carp("error inserting version in " . $file->name)
       unless $stmt->insert_after($children[0]->clone)
       and    $stmt->insert_after( PPI::Token::Whitespace->new("\n") );
