@@ -34,8 +34,6 @@ Dist::Zilla::File::OnDisk
 
 # PLUGINS
 
-Dist::Zilla::Plugin::PkgVersion
-
 Dist::Zilla::Plugin::ExtraTests
 Dist::Zilla::Plugin::MetaTests
 Dist::Zilla::Plugin::PodTests
