@@ -2,8 +2,12 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           numerous improvements to testing libraries
+          ...and numerous actual tests!
+
           added include_dotfiles option to AllFiles
           allow relative root directory for AllFiles
+
+          PkgVersion now adds a fully-qualified $VERSION variables, not 'our'
           add 'dzil nop' command to initialize zilla object and exit
 
 1.100711  2010-03-12 12:51:55 America/New_York
